--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>链接</title>    
 </head>
 <body>
-<a href="https://qiytan.github.io/spa/01-first-app">https://qiytan.github.io/spa/01-first-app</a>
-<a href="https://qiytan.github.io/spa/02-time-button">https://qiytan.github.io/spa/02-time-button</a> 
-<a href="https://qiytan.github.io/spa/03-password">https://qiytan.github.io/spa/03-password</a>
-<a href="https://qiytan.github.io/spa/04-age-range">https://qiytan.github.io/spa/04-age-range</a>   
-<a href="https://qiytan.github.io/spa/05-progressBar">https://qiytan.github.io/spa/05-progressBar</a>
+<a href="https://qiytan.github.io/spa/01-first-app">https://qiytan.github.io/spa/01-first-app</a><br>
+<a href="https://qiytan.github.io/spa/02-time-button">https://qiytan.github.io/spa/02-time-button</a> <br>
+<a href="https://qiytan.github.io/spa/03-password">https://qiytan.github.io/spa/03-password</a><br>
+<a href="https://qiytan.github.io/spa/04-age-range">https://qiytan.github.io/spa/04-age-range</a><br> 
+<a href="https://qiytan.github.io/spa/05-progressBar">https://qiytan.github.io/spa/05-progressBar</a><br>
 </body>
 
 </html>
