--- a/02-time-button/index.html
+++ b/02-time-button/index.html
@@ -4,9 +4,10 @@
   <meta charset="UlTF-8">
   <title>定时器</title>
   <link rel="stylesheet" href="index.css">
-  <script src="index.js"></script>
+  
 </head>
 <body>
-  <button id="timeButton"></button>
+<button id="timeButton">同意</button>
 </body>
+<script type = "text/javascript" src = "index.js"></script>
 </html>
