第三次表单验证

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <a href="https://qiytan.github.io/spa/03-password">https://qiytan.github.io/spa/03-password</a><br>
 <a href="https://qiytan.github.io/spa/04-age-range">https://qiytan.github.io/spa/04-age-range</a><br> 
 <a href="https://qiytan.github.io/spa/05-progressBar">https://qiytan.github.io/spa/05-progressBar</a><br>
+<a href="https://qiytan.github.io/spa/01-test1">https://qiytan.github.io/spa/01-test1</a><br>
+<a href="https://qiytan.github.io/spa/01-test2">https://qiytan.github.io/spa/01-test2</a><br>
+<a href="https://qiytan.github.io/spa/01-test3">https://qiytan.github.io/spa/01-test3</a><br>
+<a href="https://qiytan.github.io/spa/01-test4">https://qiytan.github.io/spa/01-test4</a><br>
 </body>
-
 </html>
