--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
 <a href="https://qiytan.github.io/spa/01-test2">https://qiytan.github.io/spa/01-test2</a><br>
 <a href="https://qiytan.github.io/spa/01-test3">https://qiytan.github.io/spa/01-test3</a><br>
 <a href="https://qiytan.github.io/spa/01-test4">https://qiytan.github.io/spa/01-test4</a><br>
+<a href="https://qiytan.github.io/spa/06-password">https://qiytan.github.io/spa/06-password</a><br>
+<a href="https://qiytan.github.io/spa/06-timer-button">https://qiytan.github.io/spa/06-timer-button</a><br>
 </body>
 </html>
